@@ -2,4 +2,8 @@ org.mmisw.voc2rdf II
 Carlos Rueda
 October 2008
 
-an attempt to quicly overhaul the voc2rdf interface
+A new version of Voc2RDF, with a new interface and a more flexible
+metadata association.
+
+
+See ChangeLog.txt
