@@ -3,5 +3,10 @@ Carlos Rueda - MMI / MBARI
 
 ChangeLog
 
+2008-10-23
+	- Code clean-up:
+		- new Converter which is a simplified adaptation of 
+		  org.mmi.ont.MetadataBean (which was removed).
+		  
 2008-10-14
 	- Initial version 0.1.0
